--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,9 @@ trigger:
 - master
 
 pool:
-  vmImage: ubuntu-latest
+  name: Dudu
+  demands:
+   - agent.name -equals Dudu
 
 steps:
 - task: NodeTool@0
